--- a/video_foot_ml/developpement_et_analyse/ajout_couleurs.ipynb
+++ b/video_foot_ml/developpement_et_analyse/ajout_couleurs.ipynb
@@ -27,8 +27,8 @@
    },
    "cell_type": "code",
    "source": [
-    "chemin_Image = \"../output_videos/image_rognee_1.jpg\"\n",
-    "image = cv2.imread(chemin_Image)\n",
+    "chemin_image = \"../output_videos/image_rognee_1.jpg\"\n",
+    "image = cv2.imread(chemin_image)\n",
     "image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)"
    ],
    "id": "bc9aaa102123f021",
@@ -72,8 +72,8 @@
    "cell_type": "code",
    "source": [
     "# Prendre moitié supérieure\n",
-    "moitie_Haut = image[0: int(image.shape[0] / 2), :]\n",
-    "plt.imshow(moitie_Haut)\n",
+    "moitie_haut = image[0: int(image.shape[0]/2), :]\n",
+    "plt.imshow(moitie_haut)\n",
     "plt.show()"
    ],
    "id": "c4e8770e47c1f1f1",
