--- a/VideoFootMl/DéveloppementEtAnalyse/AjoutCouleurs.ipynb
+++ b/VideoFootMl/DéveloppementEtAnalyse/AjoutCouleurs.ipynb
@@ -12,8 +12,7 @@
    },
    "source": [
     "import cv2\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
    "execution_count": 2
@@ -27,9 +26,11 @@
    },
    "cell_type": "code",
    "source": [
-    "chemin_image = \"../output_videos/image_rognee_1.jpg\"\n",
-    "image = cv2.imread(chemin_image)\n",
-    "image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)"
+    "# Définir le chemin de l'image à charger\n",
+    "chemin_Image = \"../VideosOutput/image_rognee_1.jpg\"\n",
+    "#  Lire l'image avec OpenCV (en BGR) puis la convertir en RGB pour matplotlib\n",
+    "image = cv2.imread(chemin_Image)\n",
+    "image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)  # Conversion BGR → RGB pour affichage avec matplotlib"
    ],
    "id": "bc9aaa102123f021",
    "outputs": [],
@@ -44,6 +45,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Afficher l'image complète\n",
     "plt.imshow(image)\n",
     "plt.show()"
    ],
@@ -71,9 +73,11 @@
    },
    "cell_type": "code",
    "source": [
-    "# Prendre moitié supérieure\n",
-    "moitie_haut = image[0: int(image.shape[0]/2), :]\n",
-    "plt.imshow(moitie_haut)\n",
+    "# --- Extraire la moitié supérieure de l'image ---\n",
+    "# Prendre les lignes de 0 jusqu'à la moitié de la hauteur (shape[0] est la hauteur)\n",
+    "moitie_Haut = image[0: int(image.shape[0] / 2), :]\n",
+    "# Afficher uniquement la moitié supérieure\n",
+    "plt.imshow(moitie_Haut)\n",
     "plt.show()"
    ],
    "id": "c4e8770e47c1f1f1",
